infra/k8s-dev/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: karkaushal.dev
      http:
        paths:        
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: user-srv
                port:
                  number: 3000
          - path: /api/products/?(.*)
            pathType: Prefix
            backend:
              service:
                name: products-srv
                port:
                  number: 3000
          - path: /api/upload/?(.*)
            pathType: Prefix
            backend:
              service:
                name: products-srv
                port:
                  number: 3000
          - path: /upload/?(.*)
            pathType: Prefix
            backend:
              service:
                name: products-srv
                port:
                  number: 3000
          - path: /monitor/?(.*)
            pathType: Prefix
            backend:
              service:
                name: monitor-srv
                port:
                  number: 3000
                  
          - path: /api/orders/?(.*)
            pathType: Prefix
            backend:
              service:
                name: orders-srv
                port:
                  number: 3000
          - path: /api/payments/?(.*)
            pathType: Prefix
            backend:
              service:
                name: payment-srv
                port:
                  number: 3000
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
